@@ -19,6 +19,7 @@ git-annex (5.20140118) UNRELEASED; urgency=medium
   * Client, transfer, incremental backup, and archive repositories
     now want to get content that does not yet have enough copies.
   * repair: Check git version at run time.
+  * assistant: Run the periodic git gc in batch mode.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 18 Jan 2014 11:54:17 -0400
 
